@@ -108,13 +108,17 @@ mknetrel.  Get it from:
           </pre>
         </blockquote>
 
-<p>Create  a Cygwin cross building
+<p>Setup a binary Cygwin environment.  There is a bare bones <a
+href="http://lilypond.org/cygwin/cyg-apt">cyg-apt</a> script that can
+set it up and help keep it up to date.
+
+<p>Create a Cygwin cross building
 environment, if you don't have it:
 Apply the
-<a href="http://lilypond.org/cygwin/mknetnel/mknetrel-cross-tools.patch">mknetrel-cross-tools patch</a>, and read <code>CROSS-TOOLS</code>.
+<a href="http://lilypond.org/cygwin/mknetrel-cross-tools.patch">mknetrel-cross-tools patch</a>, and read <code>CROSS-TOOLS</code>.
 <p>
 (Although mknetrel is well suited for this, the mknetrel maintainer
-does not see any reason to include this patch.)
+does not want to include any cross building setup.)
 
    <p>You can also get <a
 href="http://lilypond.org/lilypond/cygwin/i386-gnu-linux-x-i686-pc-cygwin">precompiled
