@@ -55,7 +55,7 @@ make music that looks so good?"&rdquo;
 
 <p align=right>
 <em><a href="http://www.sfu.ca/~gperciva/">Graham Parcival</a>, cello teacher.
-g</em>
+</em>
 
 
 
